room-layout-calculator.html

--- a/construction-diy.html
+++ b/construction-diy.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head> 
-<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-<link rel="shortcut icon" href="/favicon.ico" />
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-<link rel="manifest" href="/site.webmanifest" />
+<link rel="icon" type="image/png" href="https://calcdomain.com/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="https://calcdomain.com/favicon.svg" />
+<link rel="shortcut icon" href="https://calcdomain.com/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="https://calcdomain.com/apple-touch-icon.png" />
+<link rel="manifest" href="https://calcdomain.com/site.webmanifest" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Construction & DIY Calculators - Free Tools for Professional Calculations</title>
@@ -19,7 +19,7 @@
         .card-hover:hover { transform: translateY(-5px); box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05); }
     </style>
     <!-- Ezoic, Google AdSense, GSC, and GA scripts would go here -->
-<script src="search.js" defer></script>
+<script src="https://calcdomain.com/search.js" defer></script>
 <!-- MathJax for LaTeX formulas -->
 <script>
   window.MathJax = {
@@ -40,7 +40,7 @@
     <!-- Header -->
     <header class="bg-white shadow-sm sticky top-0 z-50">
         <nav class="container mx-auto px-4 lg:px-6 py-4 flex justify-between items-center">
-            <a href="index.html" class="text-2xl font-bold text-blue-600">CalcDomain</a>
+            <a href="https://calcdomain.com/index.html" class="text-2xl font-bold text-blue-600">CalcDomain</a>
             <div class="w-full max-w-md hidden md:block">
                 <div class="relative">
                     <input type="search" placeholder="Search for a calculator..." class="w-full py-2 px-4 border border-gray-300 rounded-full focus:outline-none focus:ring-2 focus:ring-blue-500">
@@ -59,7 +59,7 @@
             <main class="w-full lg:w-2/3">
                 <!-- Breadcrumbs -->
                 <nav class="text-sm mb-4 text-gray-600">
-                    <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
+                    <a href="https://calcdomain.com/index.html" class="hover:text-blue-600">Home</a> &raquo;
                     <span>Construction & DIY Calculators</span>
                 </nav>
 
@@ -76,7 +76,7 @@
                     <div>
                         <h2 class="text-2xl font-bold border-b pb-2 mb-6">Project Layout & Design</h2>
                         <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-                            <a href="room-layout-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            <a href="https://calcdomain.com/room-layout-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -84,7 +84,7 @@
                                     <h3 class="font-semibold text-gray-800">Room Layout Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate room layout calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="floor-plan-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/floor-plan-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -92,7 +92,7 @@
                                     <h3 class="font-semibold text-gray-800">Floor Plan Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate floor plan calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="space-planning-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/space-planning-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -100,7 +100,7 @@
                                     <h3 class="font-semibold text-gray-800">Space Planning Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate space planning calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="furniture-layout-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/furniture-layout-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -108,7 +108,7 @@
                                     <h3 class="font-semibold text-gray-800">Furniture Layout Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate furniture layout calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="kitchen-layout-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/kitchen-layout-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -116,7 +116,7 @@
                                     <h3 class="font-semibold text-gray-800">Kitchen Layout Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate kitchen layout calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="bathroom-layout-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/bathroom-layout-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -127,7 +127,7 @@
                             </a>
                         </div>
                         <div class="mt-4 text-center">
-                            <a href="subcategories/project-layout-design.html" class="inline-flex items-center text-blue-600 hover:text-blue-700 font-semibold">
+                            <a href="https://calcdomain.com/subcategories/project-layout-design.html" class="inline-flex items-center text-blue-600 hover:text-blue-700 font-semibold">
                                 View All Project Layout & Design Calculators
                                 <svg class="w-5 h-5 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3"></path></svg>
                             </a>
@@ -138,7 +138,7 @@
                     <div>
                         <h2 class="text-2xl font-bold border-b pb-2 mb-6">Materials Estimation</h2>
                         <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-                            <a href="concrete-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            <a href="https://calcdomain.com/concrete-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -146,7 +146,7 @@
                                     <h3 class="font-semibold text-gray-800">Concrete Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate concrete calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="lumber-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/lumber-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -154,7 +154,7 @@
                                     <h3 class="font-semibold text-gray-800">Lumber Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate lumber calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="paint-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/paint-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -162,7 +162,7 @@
                                     <h3 class="font-semibold text-gray-800">Paint Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate paint calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="flooring-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/flooring-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -170,7 +170,7 @@
                                     <h3 class="font-semibold text-gray-800">Flooring Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate flooring calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="tile-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/tile-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -178,7 +178,7 @@
                                     <h3 class="font-semibold text-gray-800">Tile Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate tile calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="drywall-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/drywall-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -189,7 +189,7 @@
                             </a>
                         </div>
                         <div class="mt-4 text-center">
-                            <a href="subcategories/materials-estimation.html" class="inline-flex items-center text-blue-600 hover:text-blue-700 font-semibold">
+                            <a href="https://calcdomain.com/subcategories/materials-estimation.html" class="inline-flex items-center text-blue-600 hover:text-blue-700 font-semibold">
                                 View All Materials Estimation Calculators
                                 <svg class="w-5 h-5 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3"></path></svg>
                             </a>
@@ -212,10 +212,10 @@
                         <h3 class="font-bold text-lg mb-4">Most Popular</h3>
                         <ul class="space-y-3">
 
-                            <li><a href="concrete-calculator.html" class="text-blue-600 hover:underline">Concrete Calculator</a></li>
-                            <li><a href="paint-calculator.html" class="text-blue-600 hover:underline">Paint Calculator</a></li>
-                            <li><a href="flooring-calculator.html" class="text-blue-600 hover:underline">Flooring Calculator</a></li>
-                            <li><a href="lumber-calculator.html" class="text-blue-600 hover:underline">Lumber Calculator</a></li>
+                            <li><a href="https://calcdomain.com/concrete-calculator.html" class="text-blue-600 hover:underline">Concrete Calculator</a></li>
+                            <li><a href="https://calcdomain.com/paint-calculator.html" class="text-blue-600 hover:underline">Paint Calculator</a></li>
+                            <li><a href="https://calcdomain.com/flooring-calculator.html" class="text-blue-600 hover:underline">Flooring Calculator</a></li>
+                            <li><a href="https://calcdomain.com/lumber-calculator.html" class="text-blue-600 hover:underline">Lumber Calculator</a></li>
                         </ul>
                     </div>
                 </div>
