--- a/index.html
+++ b/index.html
@@ -571,6 +571,19 @@
                     </div>
                 </a>
 
+
+                                <a href="construction.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                <div class="bg-blue-100 p-3 rounded-full">
+                    <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <rect width="20" height="4" x="2" y="10" rx="2"></rect>
+                    </svg>
+                </div>
+                <div>
+                    <h3 class="font-semibold text-gray-800">Construction Calculators</h3>
+                    <p class="text-sm text-gray-600 mt-1">Real-world sizing, material, cost, remodel, slab/foundation, and area/volume calculators for construction projects.</p>
+                </div>
+                </a>
+
                 <!-- "Browse All" Card -->
                 <div class="card-hover bg-gradient-to-br from-gray-800 to-gray-900 rounded-lg shadow-md overflow-hidden text-white">
                     <div class="p-8 text-center">
