--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
                 </a>
 
 
-                                <a href="construction.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                                        <a href="construction.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                 <div class="bg-blue-100 p-3 rounded-full">
                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <rect width="20" height="4" x="2" y="10" rx="2"></rect>
@@ -580,7 +580,7 @@
                 </div>
                 <div>
                     <h3 class="font-semibold text-gray-800">Construction Calculators</h3>
-                    <p class="text-sm text-gray-600 mt-1">Real-world sizing, material, cost, remodel, slab/foundation, and area/volume calculators for construction projects.</p>
+                    <p class="text-sm text-gray-600 mt-1">Slabs, materials, project sizing, cost, and home/contractor tools for builders and pros.</p>
                 </div>
                 </a>
 
