--- a/space-planning-calculator.html
+++ b/space-planning-calculator.html
@@ -106,7 +106,7 @@ body * { visibility: hidden; }
 "url": "https://calcdomain.com/space-planning-calculator.html",
 "inLanguage": "en",
 "author": { "@type": "Person", "name": "Ugo Candido" },
-"publisher": { "@type": "Organization", "name": "CalcDomain" }
+"publisher": { "@type": "Organization", "name": "CalcDomain" }space-planning-calculator
 }
 </script>
 <script type="application/ld+json">
