--- a/subcategories/miscellaneous.html
+++ b/subcategories/miscellaneous.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head> 
-<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-<link rel="shortcut icon" href="/favicon.ico" />
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-<link rel="manifest" href="/site.webmanifest" />
+<link rel="icon" type="image/png" href="https://calcdomain.com/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="https://calcdomain.com/favicon.svg" />
+<link rel="shortcut icon" href="https://calcdomain.com/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="https://calcdomain.com/apple-touch-icon.png" />
+<link rel="manifest" href="https://calcdomain.com/site.webmanifest" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Miscellaneous Calculators - Professional Tools for Miscellaneous</title>
@@ -31,8 +31,8 @@
   };
 </script>
 <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
-<link rel="preload" href="/assets/js/mobile-menu.js" as="script">
-<link rel="preload" href="/assets/js/page-enhancements.js" as="script">
+<link rel="preload" href="https://calcdomain.com/assets/js/mobile-menu.js" as="script">
+<link rel="preload" href="https://calcdomain.com/assets/js/page-enhancements.js" as="script">
 
 </head>
 <body class="bg-gray-50 text-gray-800">
@@ -40,7 +40,7 @@
     <!-- Header -->
     <header class="bg-white shadow-sm sticky top-0 z-50">
         <nav class="container mx-auto px-4 lg:px-6 py-4 flex justify-between items-center">
-            <a href="../index.html" class="text-2xl font-bold text-blue-600">CalcDomain</a>
+            <a href="https://calcdomain.com/index.html" class="text-2xl font-bold text-blue-600">CalcDomain</a>
             <div class="w-full max-w-md hidden md:block">
                 <div class="relative">
                     <input type="search" placeholder="Search for a calculator..." class="w-full py-2 px-4 border border-gray-300 rounded-full focus:outline-none focus:ring-2 focus:ring-blue-500">
@@ -59,8 +59,8 @@
             <main class="w-full lg:w-2/3">
                 <!-- Breadcrumbs -->
                 <nav class="text-sm mb-4 text-gray-600">
-                    <a href="../index.html" class="hover:text-blue-600">Home</a> &raquo;
-                    <a href="../lifestyle-everyday.html" class="hover:text-blue-600">Lifestyle & Everyday Calculators</a> &raquo;
+                    <a href="https://calcdomain.com/index.html" class="hover:text-blue-600">Home</a> &raquo;
+                    <a href="https://calcdomain.com/lifestyle-everyday.html" class="hover:text-blue-600">Lifestyle & Everyday Calculators</a> &raquo;
                     <span>Miscellaneous</span>
                 </nav>
 
@@ -73,7 +73,7 @@
                 <!-- Calculators Grid -->
                 <section>
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-                            <a href="tip.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            <a href="https://calcdomain.com/tip.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -81,7 +81,7 @@
                                     <h3 class="font-semibold text-gray-800">Tip Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate tip calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="grade-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/grade-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -89,7 +89,7 @@
                                     <h3 class="font-semibold text-gray-800">Grade Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate grade calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="gpa-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/gpa-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -97,7 +97,7 @@
                                     <h3 class="font-semibold text-gray-800">GPA Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate gpa calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="discount-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/discount-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -105,7 +105,7 @@
                                     <h3 class="font-semibold text-gray-800">Discount Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate discount calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="sales-tax-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/sales-tax-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -113,7 +113,7 @@
                                     <h3 class="font-semibold text-gray-800">Sales Tax Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate sales tax calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="markup-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/markup-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -121,7 +121,7 @@
                                     <h3 class="font-semibold text-gray-800">Markup Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate markup calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="profit-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/profit-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -129,7 +129,7 @@
                                     <h3 class="font-semibold text-gray-800">Profit Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate profit calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="split-bill-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/split-bill-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -137,7 +137,7 @@
                                     <h3 class="font-semibold text-gray-800">Split Bill Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate split bill calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="lottery-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/lottery-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -145,7 +145,7 @@
                                     <h3 class="font-semibold text-gray-800">Lottery Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate lottery calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="odds-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/odds-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -153,7 +153,7 @@
                                     <h3 class="font-semibold text-gray-800">Odds Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate odds calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="probability-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/probability-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -161,7 +161,7 @@
                                     <h3 class="font-semibold text-gray-800">Probability Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate probability calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="random-number-generator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/random-number-generator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -169,7 +169,7 @@
                                     <h3 class="font-semibold text-gray-800">Random Number Generator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate random number generator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="password-generator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/password-generator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -177,7 +177,7 @@
                                     <h3 class="font-semibold text-gray-800">Password Generator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate password generator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="qr-code-generator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/qr-code-generator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
