--- a/subcategories/miscellaneous.html
+++ b/subcategories/miscellaneous.html
@@ -379,7 +379,8 @@
                                 </div>
                             </a>                            <a href="https://calcdomain.com/subnet-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
-                                    <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
+                                    <svg class="w-6 h-6 text-blue-600" fill="none"
+ stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
                                     <h3 class="font-semibold text-gray-800">Subnet Calculator</h3>
@@ -387,7 +388,7 @@
                                 </div>
                             </a>                            <a href="https://calcdomain.com/ip-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
-                                    <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
+                                    <svg class="w-6 h-6 text-blue-600" fill="none"  stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
                                     <h3 class="font-semibold text-gray-800">IP Calculator</h3>
@@ -490,10 +491,10 @@
                     <div class="bg-white p-6 rounded-lg shadow-md">
                         <h3 class="font-bold text-lg mb-4">Related Categories</h3>
                         <ul class="space-y-3">
-                            <li><a href="../finance.html" class="text-blue-600 hover:underline">Finance Calculators</a></li>
-                            <li><a href="../health-fitness.html" class="text-blue-600 hover:underline">Health & Fitness</a></li>
-                            <li><a href="../math-conversions.html" class="text-blue-600 hover:underline">Math & Conversions</a></li>
-                            <li><a href="../lifestyle-everyday.html" class="text-blue-600 hover:underline">Lifestyle & Everyday</a></li>
+                            <li><a href="https://calcdomain.com/finance.html" class="text-blue-600 hover:underline">Finance Calculators</a></li>
+                            <li><a href="https://calcdomain.com/health-fitness.html" class="text-blue-600 hover:underline">Health & Fitness</a></li>
+                            <li><a href="https://calcdomain.com/math-conversions.html" class="text-blue-600 hover:underline">Math & Conversions</a></li>
+                            <li><a href="https://calcdomain.com/lifestyle-everyday.html" class="text-blue-600 hover:underline">Lifestyle & Everyday</a></li>
                         </ul>
                     </div>
                 </div>
