--- a/packet-loss-calculator.html
+++ b/packet-loss-calculator.html
@@ -20,8 +20,8 @@
     
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.10/dist/katex.min.css" integrity="sha384-sN1MATnYdvsvdkB4c/FWAhIe3eCikGSO/wNmfKBD2CHsSLAYkWv4Hj+C1GjQeE/j" crossorigin="anonymous">
     <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.10/dist/katex.min.js" integrity="sha384-hIoYJkEuSB9AYUfMhF2iNBYDqMAdQGZOPMcWSRcQPhLUPwPSMN2tqKGSNchKjMIi" crossorigin="anonymous"></script>
-    <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.10/dist/contrib/auto-render.min.js" integrity="sha384-+VBxd3rVO5stq9M2+QdJnBbmCqGqAgHPKOe/NMl+sE/SrzLMRo5Sr/4/QYdAGLwA" crossorigin="anonymous" onload="renderMathInElement(document.body, { delimiters: [ {left: '$$', right: '$$', display: true}, {left: '$', right: '$', display: false} ] });"></script>
 
+    <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.10/dist/contrib/auto-render.min.js" integrity="sha384-+VBxd3rVO5stq9M2+QdJnBbmCqGqAgHPKOe/NMl+sE/SrzLMRo5Sr/4/QYdAGLwA" crossorigin="anonymous"></script>
     <style>
         body { font-family: 'Inter', sans-serif; }
         .prose { max-width: 65ch; }
@@ -542,6 +542,17 @@
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             
+            // Esegui il rendering di KaTeX/LaTeX DOPO che tutti gli script defer sono stati caricati
+            if (typeof renderMathInElement === 'function') {
+                renderMathInElement(document.body, {
+                    delimiters: [
+                        {left: '$$', right: '$$', display: true},
+                        {left: '$', right: '$', display: false}
+                    ],
+                    throwOnError: false // Impedisce che un errore LaTeX rompa lo script
+                });
+            }
+
             // --- Elementi DOM ---
             const calculatorForm = document.getElementById('calculator-form');
             const sentInput = document.getElementById('packetsSent');
