--- a/mph-to-mach.html
+++ b/mph-to-mach.html
@@ -9,7 +9,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MPH to Mach Converter – Miles Per Hour to Mach Number</title>
-  <meta name="description" content="Convert miles per hour (mph) to Mach (speed of sound) using the standard sea level value. Perfect for aviation, ballistics, and engineering.">
+  <meta name="description" content="Convert speed in miles per hour (mph) to Mach number (speed of sound) for aviation, ballistics, meteorology, and science.">
   <link rel="canonical" href="https://calcdomain.com/mph-to-mach.html"/>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -50,46 +50,47 @@
         <nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
           <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
           <a href="math-conversions.html" class="hover:text-blue-600">Math & Conversion Calculators</a> &raquo;
-          <a href="subcategories/measurement-unit-conversions.html" class="hover:text-blue-600">Measurement Unit Conversions</a> &raquo;
-          <span class="text-gray-900">MPH to Mach Converter</span>
+          <span class="text-gray-900">MPH to Mach</span>
         </nav>
         <div class="bg-white p-6 rounded-lg shadow-md">
           <h1 class="text-3xl font-extrabold text-gray-900 mb-2">MPH to Mach Converter</h1>
-          <p class="text-gray-600 mb-6">Convert miles per hour (mph) to Mach (multiplier of speed of sound, sea level). Ideal for pilots, engineers, ballistics, and physicists.</p>
+          <p class="text-gray-600 mb-6">Convert speed in miles per hour (mph) to Mach number (multiple of the speed of sound at sea level, std. atm.). Essential for aircraft, rockets, and science applications.</p>
           <form id="mphForm" class="space-y-6" autocomplete="off">
             <div>
-              <label for="mphInput" class="block text-sm font-medium text-gray-700 mb-2">Miles per Hour (mph)</label>
+              <label for="mphInput" class="block text-sm font-medium text-gray-700 mb-2">Speed in Miles per Hour (mph)</label>
               <input id="mphInput" type="number" step="any" class="w-full px-4 py-3 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="e.g., 1200">
             </div>
             <div class="bg-blue-50 p-6 rounded-lg border border-blue-200 flex flex-col items-center">
               <div class="text-xs text-gray-500 mb-1 self-start">Result:</div>
-              <div class="text-xs text-gray-500 mb-1 self-start">Mach Number</div>
+              <div class="text-xs text-gray-500 mb-1 self-start">Mach Number (mach)</div>
               <div id="machResult" class="text-2xl font-bold text-blue-600">0.00</div>
             </div>
           </form>
           <section class="mt-10 prose">
             <h2>Formula</h2>
             <div class="bg-gray-100 p-3 rounded font-mono text-center border text-lg my-2">
-              <code>Mach = mph &divide; 761.207</code>
+              <code>Mach = mph ÷ 761.207</code>
             </div>
             <p>
-              For standard atmosphere/sea level, 1 Mach = 761.207 mph.<br>
-              (Speed of sound = 340.29 m/s; value varies with altitude and air conditions.)
+              Standard: 1 Mach = 761.207 mph at sea level, ISA (15°C, 101.325 kPa).
+              To convert, divide the mph value by 761.207.
             </p>
-            <h2>Worked Example</h2>
+            <h2>Example Calculation</h2>
             <ul>
-              <li>1960 mph &divide; 761.207 = 2.57 Mach</li>
-              <li>Result: 1960 mph = Mach 2.57</li>
+              <li>1522.41 mph ÷ 761.207 = 2.00 Mach</li>
+              <li>Result: 1522.41 mph = Mach 2</li>
             </ul>
-            <h2>Frequently Asked Questions</h2>
+            <h2>FAQ</h2>
             <details>
-              <summary>How do I convert mph to Mach?</summary>
-              <p>Divide the speed in mph by 761.207.</p>
+              <summary>How do you convert mph to mach?</summary>
+              <p>Divide the speed in mph by 761.207. Example: 500 mph ÷ 761.207 = 0.66 Mach.</p>
             </details>
             <details>
-              <summary>Is Mach always the same?</summary>
-              <p>No, the actual speed of sound varies with air temperature, pressure, and humidity. This tool uses the standard sea-level value.</p>
+              <summary>When is this calculator useful?</summary>
+              <p>Whenever you want to relate speeds in mph to multiples of the speed of sound (jets, rockets, high-speed wind tunnels, physics).</p>
             </details>
+            <h2>Data Source</h2>
+            <p>Based on standard atmosphere: 1 Mach = 340.29 m/s = 761.207 mph.</p>
           </section>
           <div class="mt-8 pt-6 border-t border-gray-200 text-sm text-gray-600">
             Tool by <strong>Ugo Candido</strong>. Last reviewed: 2025.
@@ -101,7 +102,7 @@
           <div class="bg-white p-6 rounded-lg shadow-md">
             <h2 class="text-lg font-semibold text-gray-900 mb-3">Quick Reference</h2>
             <ul class="space-y-2 text-sm text-gray-600">
-              <li>Mach 1 = 761.207 mph</li>
+              <li>760 mph = Mach ~1</li>
               <li>1000 mph = Mach 1.31</li>
               <li>1500 mph = Mach 1.97</li>
               <li>2000 mph = Mach 2.63</li>
