--- a/construction.html
+++ b/construction.html
@@ -55,7 +55,7 @@
     <section class="mb-10">
       <h2 class="text-2xl font-semibold text-gray-800 mb-4">Quick Access</h2>
       <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
-        <a href="concrete.html" class="bg-white p-4 rounded-lg border shadow-sm hover:shadow-lg transition flex items-center gap-4">
+        <a href="concrete-calculator.html" class="bg-white p-4 rounded-lg border shadow-sm hover:shadow-lg transition flex items-center gap-4">
           <span class="inline-flex items-center justify-center bg-blue-100 rounded-full h-10 w-10">
             <svg class="w-6 h-6 text-blue-700" fill="none" stroke="currentColor" viewBox="0 0 24 24"><rect width="20" height="4" x="2" y="20" rx="2"></rect></svg>
           </span>
@@ -69,15 +69,15 @@
           <span class="inline-flex items-center justify-center bg-blue-100 rounded-full h-10 w-10"><svg class="w-6 h-6 text-blue-700" fill="none" stroke="currentColor" viewBox="0 0 24 24"><circle cx="12" cy="12" r="10"></circle></svg></span>
           <div><h3 class="font-semibold text-gray-800">Rebar Calculator</h3><span class="text-sm text-gray-600">Estimate rebar length/weight for slabs, beams, or decks.</span></div>
         </a>
-        <a href="rectangle-area.html" class="bg-white p-4 rounded-lg border shadow-sm hover:shadow-lg transition flex items-center gap-4">
+        <a href="rectangle-area-calculator.html" class="bg-white p-4 rounded-lg border shadow-sm hover:shadow-lg transition flex items-center gap-4">
           <span class="inline-flex items-center justify-center bg-blue-100 rounded-full h-10 w-10"><svg class="w-6 h-6 text-blue-700" fill="none" stroke="currentColor" viewBox="0 0 24 24"><rect x="4" y="4" width="16" height="16" rx="2"></rect></svg></span>
           <div><h3 class="font-semibold text-gray-800">Area Calculator</h3><span class="text-sm text-gray-600">Room, slab, or tile layout made easy.</span></div>
         </a>
-        <a href="material-estimator.html" class="bg-white p-4 rounded-lg border shadow-sm hover:shadow-lg transition flex items-center gap-4">
+        <a href="materials.html" class="bg-white p-4 rounded-lg border shadow-sm hover:shadow-lg transition flex items-center gap-4">
           <span class="inline-flex items-center justify-center bg-blue-100 rounded-full h-10 w-10"><svg class="w-6 h-6 text-blue-700" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path d="M3 17v2a2 2 0 002 2h14a2 2 0 002-2v-2"/></svg></span>
           <div><h3 class="font-semibold text-gray-800">Material Estimator</h3><span class="text-sm text-gray-600">Detailed estimation for drywall, tile, lumber and more.</span></div>
         </a>
-        <a href="cost-estimator.html" class="bg-white p-4 rounded-lg border shadow-sm hover:shadow-lg transition flex items-center gap-4">
+        <a href="construction-cost-estimator.html" class="bg-white p-4 rounded-lg border shadow-sm hover:shadow-lg transition flex items-center gap-4">
           <span class="inline-flex items-center justify-center bg-blue-100 rounded-full h-10 w-10"><svg class="w-6 h-6 text-blue-700" fill="none" stroke="currentColor" viewBox="0 0 24 24"><circle cx="12" cy="12" r="10"></circle><text x="12" y="16" text-anchor="middle" font-size="12" fill="#1d4ed8">$</text></svg></span>
           <div><h3 class="font-semibold text-gray-800">Project Cost</h3><span class="text-sm text-gray-600">Project and renovation cost estimates.</span></div>
         </a>
